Fix gamepad connected status on Android

Commit 06bdceaa78d93d74a2a0ffc00886915b6bb8d346 [formerly 667f05771b5c1275f87599076d222c0ed21ba22b] created a regression
in gamepad API functionality on Android by removing the assignment
that sets the gamepad.connected value. This CL adds the missing
assignment back.

BUG=644162

Review-Url: https://codereview.chromium.org/2350573002
Cr-Commit-Position: refs/heads/master@{#422947}

Former-commit-id: 4b5f513335e161aa156e0114b052e18a96e44871